apps/platform/kong/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-kong
  labels:
    platform.jaccloud.nl/managed-by: argocd
    platform.jaccloud.nl/tenant: platform
    platform.jaccloud.nl/service: kong
